# Hahaton

./: .gitignore  CMakeLists.txt  Dockerfile  OpenCV
.github/workflows/: docker.yml  opencv.yml  vision.yml
app/: CMakeLists.txt  main.cpp
cmd/: build_opencv.sh
docker/: GOpenCV  OpenCV  Vision
docs/: CMakeLists.txt
include/vision/: Config.hpp  Detector.hpp  FrontalFaceDetector.hpp  ImageOperator.hpp  Network.hpp  Vision.hpp  vision.hpp
src/: CMakeLists.txt  Detector.cpp  FrontalFaceDetector.cpp  Vision.cpp  vision.cpp
storage/: CMakeLists.txt
vision/: CMakeLists.txt  FrontalFaceDetector.cpp  ImageOperator.cpp  Network.cpp  Vision.cpp
